syntax = "proto3";
package celestia.core.v1.gas_estimation;

import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/celestiaorg/celestia-app/app/grpc/gas_estimation";

service GasEstimator {
  rpc EstimateGasPrice(EstimateGasPriceRequest) returns (EstimateGasPriceResponse) {}
  rpc EstimateGasPriceAndUsage(EstimateGasPriceAndUsageRequest) returns (EstimateGasPriceAndUsageResponse) {}
}

// TxPriority is the priority level of the requested gas price.
// The following priority levels are defined:
// - High Priority: The gas price is the price at the start of the top 10% of transactionsâ€™ gas prices from the last 5 blocks.
// - Medium Priority: The gas price is the median of all gas prices from the last 5 blocks.
// - Low Priority: The gas price is the value at the end of the lowest 10% of gas prices from the last 5 blocks.
// - None Priority (default): This is equivalent to the Medium priority, using the median of all gas prices from the last 5 blocks.
enum TxPriority {
  NONE = 0;
  LOW = 1;
  MEDIUM = 2;
  HIGH = 3;
}

message EstimateGasPriceRequest {
  TxPriority tx_priority = 1;
}

message EstimateGasPriceResponse {
  double estimated_gas_price = 1;
}

message EstimateGasPriceAndUsageRequest {
  TxPriority tx_priority = 1;
  bytes tx_bytes = 2;
}

message EstimateGasPriceAndUsageResponse {
  double estimated_gas_price = 1;
  uint64 estimated_gas_used = 2;
}
